--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spring": "8.0.27",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
+    "uuidv4": "^6.2.11",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
   },
@@ -48,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.11",
     "@types/yup": "^0.29.13"
   }
